# xap-protocol

./: CODEX_IMPLEMENTATION_PROMPT.md  README.md  pytest.ini
.github/workflows/: validate.yml
acp/schemas/: verity-receipt.json
verity-engine/: Cargo.toml
verity-engine/crates/verity-integrity/: Cargo.toml
verity-engine/crates/verity-integrity/src/: chain.rs  lib.rs  merkle.rs  replay.rs  signing.rs
verity-engine/crates/verity-kernel/: Cargo.toml
verity-engine/crates/verity-kernel/src/: basis_points.rs  canonical.rs  error.rs  ids.rs  lib.rs  money.rs  time.rs
verity-engine/crates/verity-outcomes/: Cargo.toml
verity-engine/crates/verity-outcomes/src/: lib.rs
xap/examples/: registry-query-complex.json  registry-query-org.json  registry-query-simple.json  registry-response-complex.json  registry-response-simple.json  verity-complex-partial.json  verity-simple-deterministic.json
xap/tests/: validate_schemas.py
xap/tests/invalid/agent-identity/: bad-agent-id-format.json  bad-reputation-bps.json  bad-status.json  empty-capabilities.json  extra-field.json  float-pricing.json  missing-agent-id.json  missing-public-key.json  missing-xap-version.json  negative-pricing.json
xap/tests/invalid/execution-receipt/: bad-adapter-used.json  bad-finality-status.json  bad-outcome.json  extra-field.json  float-payout-amount.json  missing-payouts.json  missing-receipt-id.json  missing-signatures.json  missing-verity-hash.json  negative-chain-position.json
xap/tests/invalid/negotiation-contract/: bad-pricing-currency.json  bad-pricing-model.json  bad-state.json  counter-without-previous-hash.json  extra-field.json  missing-from-agent.json  missing-negotiation-id.json  missing-sla.json  missing-task.json  negative-round.json
xap/tests/invalid/registry-query/: bad-pagination-limit.json  bad-query-id-format.json  bad-reputation-range.json  missing-query-id.json  missing-querying-agent.json
xap/tests/invalid/registry-response/: bad-relevance-score.json  missing-pagination.json  missing-query-id.json  missing-results.json  (+1 more)
(+21 files in other folders)
