[workspace]
resolver = "2"
members = [
    "crates/verity-kernel",
    "crates/verity-outcomes",
    "crates/verity-integrity",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/agentralabs/verity-engine"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["serde"] }
rand = "0.8"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.22"
