[package]
name = "verity-integrity"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hash chains, replay proofs, and cryptographic signing for Verity"

[dependencies]
verity-kernel = { path = "../verity-kernel" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
thiserror.workspace = true
hex.workspace = true
base64.workspace = true
