[package]
name = "verity-outcomes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Outcome state machine for the Verity truth engine"

[dependencies]
verity-kernel = { path = "../verity-kernel" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
